--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
